[tool.poetry]
name = "nowpayments-api"
version = "1.0.0"
description = "A Python wrapper for the NOWPayments API."
authors = ["Tomaž Mesarec <tomaz.mesarec@gmail.com>", "Arian Ventura Rodríguez <arianventura94@gmail.com>"]
readme = "README.md"
repository = "https://github.com/tomazmm/nowpayments-api-python"
license = "MIT"
packages = [
    {include = "nowpayments_api", from="src"}
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
